alignment bugfix

--- a/css/imports/components/forms.css
+++ b/css/imports/components/forms.css
@@ -4,13 +4,14 @@
   background-color: var(--light-blue-box);
   padding: 20px;
   max-width: 1000px;
-  justify-self: center;
-  margin: 10%;
+  min-width: 280px;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  display: grid;
 }
 
 .paymentForm {
   margin: 0;
-  margin-top: -10%;
 }
 
 .formTitle {
